--- a/risk-scoring-model-demo/demo.ipynb
+++ b/risk-scoring-model-demo/demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Risk Scoring Model Demo\n",
-   "Synetic Data and Scoring\n",
+    "Synetic Data and Scoring\n"
    ]
   },
   {
